<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Save Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="event_title">Titulo del evento</string>
    <string name="title_example">Ej: Entrando a casa</string>
    <string name="delay">Retardo</string>
    <string name="frecuency">Frecuencia</string>
    <string name="total_time">Tiempo total</string>
    <string name="advice">Aviso</string>
    <string name="vibrate">Vibrar</string>
    <string name="sound">Sonar</string>
    <string name="do_nothing">No hacer nada</string>
    <string name="send_message_to">Enviar mensajes a</string>
    <string name="done">Hecho</string>
    <string name="minutes">Minutos</string>
    <string name="title_required">El campo titulo es obligatorio</string>
    <string name="contacts_required">Debe seleccionar al menos un destinatario</string>
    <string name="new_advice">Nuevo aviso</string>
    <string name="save_failed">No se pudo crear el aviso</string>
    <string name="saved_successfully">Guardado correctamente</string>
    <string name="delete">Borrar</string>
    <string name="send_to">Enviar a</string>

</resources>
