<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    android:background="@color/background_gray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="20">

        <TextView
            android:text="@string/event_title"
            style="@style/custom_font"/>

        <EditText
            style="@style/custom_edit_text"
            android:id="@+id/txtEventTitle"
            android:hint="@string/title_example"
            android:layout_marginBottom="20sp"/>

        <TextView
            style="@style/custom_font"
            android:text="@string/delay"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Spinner
                style="@style/custom_spinner"
                android:id="@+id/spnDelay" />

            <TextView
                android:layout_marginLeft="15sp"
                style="@style/custom_font"
                android:id="@+id/editText"
                android:text="@string/minutes"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="40"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/custom_font"
                android:text="@string/send_message_to" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddContact"
                android:src="@android:drawable/ic_input_add"
                android:background="@android:color/transparent"
                android:layout_gravity="right"/>
        </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="20"
            android:id="@+id/lstSelectedContacts"
            android:background="@color/white_text"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="15">

        <Button
            style="@style/done_button"
            android:text="@string/done"
            android:id="@+id/btnDoneConfig"
            android:layout_marginTop="30sp"/>
    </LinearLayout>

</LinearLayout>
